--- a/app/views/facturas/list_invoices.html.erb
+++ b/app/views/facturas/list_invoices.html.erb
@@ -21,9 +21,9 @@
 </div>
 
 <div class="button">
-  <%= link_to 'Factura Servicios - Orden', "/facturas/new/#{@company.id}" %>  
+  <%= link_to 'CPE Servicios - Orden', "/facturas/new/#{@company.id}" %>  
   
-  <%= link_to "Factura Servicios", "/facturas/new2/#{@company.id}" %>
+  <%= link_to "CPE Servicios", "/facturas/new2/#{@company.id}" %>
 </div>
 
 <br />
