--- a/app/views/ordens/_show7.html.erb
+++ b/app/views/ordens/_show7.html.erb
@@ -164,7 +164,7 @@
           </td>
 
           <td class="small bordered_bottom bordered_right">
-           <%= product.tipo_tarifa %>    
+           <%= product.tipo_cpm %>    
           </td>
           <td class="small bordered_bottom bordered_right">
            <%= product.tarifa_cpm %>    
