--- a/app/views/ordens/ordens_products/_form7.html.erb
+++ b/app/views/ordens/ordens_products/_form7.html.erb
@@ -145,7 +145,7 @@
        <td class="small bordered_bottom bordered_left">
          <div class="field">
       
-          <%= f.text_field :tipo_tarifa ,:style=> 'width: 40px'    %>
+          <%= f.text_field :tipo_cpm ,:style=> 'width: 40px'    %>
         </div>
       </td>
 
