--- a/app/views/ordens/_list.html.erb
+++ b/app/views/ordens/_list.html.erb
@@ -57,8 +57,12 @@
           <td class="bordered_right bordered_bottom">
             <%= link_to "Ver", orden %>
           </td>
+
           <td class="bordered_right bordered_bottom">
             <%= link_to "Editar", edit_orden_path(orden) %>
+          </td>
+        <td class="bordered_right bordered_bottom">
+            <%= link_to "Eliminar",  orden, method: :delete, data: { confirm: 'Are you sure?' } %>
           </td>
 
           
