--- a/app/views/companies/configuracion.html.erb
+++ b/app/views/companies/configuracion.html.erb
@@ -230,6 +230,39 @@
   <p>
      Agregar, editar or agregar tipo tarifa 
      
-  </p>  
+  </p> 
+
+
+<%= hr() %>
+
+
+  <h3>
+        <div>
+          <%= image_tag("clients_32.png", :class => "vmiddle") %>
+          <%= link_to "Tipo tarifa  CPMs ",tipo_cpms_path %> 
+        </div>
+  </h3>
+  <p>
+     Agregar, editar or agregar tipo tarifa cpm 
+     
+  </p> 
+
+
+<%= hr() %>
+
+
+  <h3>
+        <div>
+          <%= image_tag("clients_32.png", :class => "vmiddle") %>
+          <%= link_to "Tipo Formatos ",tipo_formatos_path %> 
+        </div>
+  </h3>
+  <p>
+     Agregar, editar or agregar tipo formatos
+     
+  </p> 
+
+
+
 
 </div>
