--- a/app/views/ordens/_show7.html.erb
+++ b/app/views/ordens/_show7.html.erb
@@ -4,7 +4,7 @@
     <tr>
       
       <th>
-        Website
+        Plataforma
       </th>
 
       <th>
@@ -25,7 +25,10 @@
       </th>
   
       <th>
-        Impresiones Clicks 
+        Formato
+      </th>
+      <th>
+        Cantidad  
       </th>
   
      
