--- a/app/views/ordens/ordens_products/_form7.html.erb
+++ b/app/views/ordens/ordens_products/_form7.html.erb
@@ -61,16 +61,16 @@
     
    <table>
       <tr>
-        <th>Website </th>
+        <th>Plaforma </th>
         <th>Producto  </th>
         <th> + </th>        
         <th>Motivo </th>
 
         <th>Tipo de Tarifa</th>
         <th>Tarifa</th>
-        <th>Tipo Impresion/Clicks</th>
+        <th>Formato</th>
         
-        <th>Impresiones/Clicks </th>
+        <th>Cantidad</th>
         
 
         <th>01</th>
