--- a/app/views/reports/reports_contratos.html.erb
+++ b/app/views/reports/reports_contratos.html.erb
@@ -45,19 +45,45 @@
   </p>
   
   
-  
   <h3>
    Estados de cuenta
   </h3>
-  
-  
+  <!-- 
+  <--
   <p class="big">
-    <%= link_to "Estado de cuenta ", "/companies/reports/rpt_contratos3_pdf/#{@company.id}" %>
-  
-  
-  
+    <%= link_to "Estado de cuenta ", "/companies/reports/rpt_contratos3_pdf/#{@company.id}" %>  
   
   </p>
+ --> -->
+
+  <h3>
+    <%= image_tag("invoice_32.png", :class => "vmiddle") %>
+    <%= link_to "EE.CC. Clientes ", "/companies/reports/rpt_cadmin1_all/#{@company.id}" %>
+  </h3>
+
+  <p>
+     Reporte de EE.CC. Clientes
+  </p>
+  
+  
+
+  
+  <%= hr() %>
+
+   <h3>
+    <%= image_tag("invoice_32.png", :class => "vmiddle") %>
+ <%= link_to "EE.CC. Medios ", "/companies/reports/rpt_cadmin2_all/#{@company.id}" %>
+
+  </h3>
+
+  <p>
+     Reporte de EE.CC. Medios 
+  </p>
+  
+  
+
+  
+  <%= hr() %>
 
 
 <div class="mid_box">
