--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -66,7 +66,7 @@
 
                 <div id="cards-wrapper" class="cards-wrapper row">
 
-                 <%if @current_user.level == "ventas" || @current_user.level == "admin"%> 
+                 <%if @current_user.level == "admin1" || @current_user.level == "admin"   || @current_user.level == "planner"%> 
 
                     <div class="item item-purple col-md-4 col-sm-6 col-xs-6">
                         <div class="item-inner">
@@ -83,7 +83,7 @@
 
                 
 
-            <%if @current_user.level == "compras" || @current_user.level == "admin" || @current_user.level == "almacen"%> 
+            <%if @current_user.level == "compras" || @current_user.level == "admin" || @current_user.level == "admin1"%> 
 
                         <div class="item item-green col-md-4 col-sm-6 col-xs-6">
                             <div class="item-inner">
@@ -102,7 +102,7 @@
                     <% end %>
 
 
-                    <%if @current_user.level == "ventas" || @current_user.level == "admin"%> 
+                    <%if @current_user.level == "admin1" || @current_user.level == "admin"%> 
 
                     <div class="item item-purple col-md-4 col-sm-6 col-xs-6">
                         <div class="item-inner">
@@ -116,7 +116,7 @@
                     </div><!--//item-->
                     <% end %>
   
-                    <%if @current_user.level == "finanzas" || @current_user.level == "admin"%> 
+                    <%if @current_user.level == "admin1" || @current_user.level == "admin" || @current_user.level == "admin2"%> 
 
                     <div class="item item-pink item-2 col-md-4 col-sm-6 col-xs-6">
                         <div class="item-inner">
@@ -130,7 +130,7 @@
                      </div><!--//item-->
                     <% end %>
                     
-                    <%if @current_user.level == "finanzas" || @current_user.level == "admin"%> 
+                    <%if @current_user.level == "admin1" || @current_user.level == "admin"%> 
 
                      <div class="item item-orange col-md-4 col-sm-6 col-xs-6">
                         <div class="item-inner">
@@ -145,7 +145,7 @@
                     <% end %>
 
 
-                    <%if @current_user.level == "finanzas" || @current_user.level == "admin"%> 
+                    <%if @current_user.level == "admin1" || @current_user.level == "admin"%> 
 
                     <div class="item item-purple col-md-4 col-sm-6 col-xs-6">                
                             <div class="item-inner">
@@ -160,7 +160,7 @@
 
                     <% end %>
 
-                 <%if @current_user.level == "ventas" || @current_user.level == "admin"%> 
+                 <%if @current_user.level == "admin1" || @current_user.level == "admin"%> 
 
                     <div class="item item-purple col-md-4 col-sm-6 col-xs-6">
                         <div class="item-inner">
