--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -160,7 +160,7 @@
 
                     <% end %>
 
-                 <%if @current_user.level == "admin1" || @current_user.level == "admin"%> 
+                 <%if @current_user.level == "admin1" || @current_user.level == "admin" || @current_user.level == "admin2"%> 
 
                     <div class="item item-purple col-md-4 col-sm-6 col-xs-6">
                         <div class="item-inner">
