--- a/app/views/medios/_form.html.erb
+++ b/app/views/medios/_form.html.erb
@@ -44,6 +44,16 @@
 <h3>Medios - Detalles  </h3>
 
 
+
+<div class="button">
+
+  <a href="#" onclick="toggle('filters'); return false;">Formatos</a>
+</div>
+
+<div id="filters" class="filters" style="display: <%= @filters_display %>;">
+  <div>
+    <div class="small">
+
   <table>
    <tr>
    <th style="width: 5%">Item </th>
@@ -73,6 +83,88 @@
     <% end %>
 
   </table>
+      
+    </div>
+  </div>
+
+
+  
+ 
+</div>
+
+
+
+
+<div id="dogs" class="subTabs">
+
+
+</div>
+<div id="cats" class="subTabs">
+
+<table>
+
+
+   <tr>
+   <th style="width: 5%">Item </th>
+   <th style="width: 5%">Code </th>
+   <th style="width: 15%">Nombre </th>
+   <th style="width: 15%">Cargo </th>
+   <th style="width: 15%">Telefono 1 </th>
+   <th style="width: 15%">Telefono 2 </th>
+   <th style="width: 15%">Telefono 3 </th>
+   <th style="width: 10%">Anexo 1</th>
+   <th style="width: 10%">Anexo 2</th>
+   <th style="width: 10%">Anexo 3</th>
+   
+   <th style="width: 10%">Celular 1</th>
+   <th style="width: 10%">Celular 2</th>
+   <th style="width: 10%">Celular 3</th>
+   
+   <th style="width: 10%">Correo 1</th>
+   <th style="width: 10%">Correo 2</th>
+   
+   
+   <% nroitem = 1 %>
+
+   </tr>
+
+    <%= f.fields_for :medio_contacts  do |rq_fields2| %>
+    
+    <tr>
+
+    <td style="width: 5%">  <%= nroitem %> </td>
+
+    <td style="width: 10%">  <%= rq_fields2.text_field :code , :size=>"5" %></td>
+
+    <td style="width: 15%">  <%= rq_fields2.text_field :name , :size=>"15" %></td>
+
+    <td style="width: 15%">  <%= rq_fields2.text_field :cargo , :size=>"15" %></td>    
+    <td style="width: 15%">  <%= rq_fields2.text_field :telefono1 , :size=>"15" %></td>
+    <td style="width: 15%">  <%= rq_fields2.text_field :telefono2 , :size=>"15" %></td>    
+    <td style="width: 30%">  <%= rq_fields2.text_field :telefono3 , :size=>"15" %></td>
+    <td style="width: 30%">  <%= rq_fields2.text_field :anexo1 , :size=>"15" %></td>    
+    <td style="width: 30%">  <%= rq_fields2.text_field :anexo2 , :size=>"15" %></td>
+    <td style="width: 30%">  <%= rq_fields2.text_field :anexo3 , :size=>"15" %></td>    
+    <td style="width: 30%">  <%= rq_fields2.text_field :celular1 , :size=>"15" %></td>
+    <td style="width: 30%">  <%= rq_fields2.text_field :celular2 , :size=>"15" %></td>
+    <td style="width: 30%">  <%= rq_fields2.text_field :celular3 , :size=>"15" %></td>
+    <td style="width: 30%">  <%= rq_fields2.text_field :correo1 , :size=>"15" %></td>
+    <td style="width: 30%">  <%= rq_fields2.text_field :correo2 , :size=>"15" %></td>
+    
+             
+
+    </tr>
+  
+    <% nroitem +=1 %>
+
+    
+    <% end %>
+
+  </table>
+
+
+
+</div>
 
 
 
@@ -80,3 +172,22 @@
     <%= f.button :submit %>
   </div>
 <% end %>
+
+
+
+<script type="text/javascript">
+$(document).ready(function() {
+    $('.subTabs').hide(); //Hide the subTabs as soon as the DOM is loaded.
+
+    $('li').live('click', function(e) {
+        $('.subTabs').hide(); //Calling this again so as to remove an already loaded
+                                tab, if any. You can refactor this part to make it
+                                even simpler.
+        $('body').find('.subTabs').attr('id',$(this).attr('id')).show();
+             //This finds the ".subTabs" whose id is the same as the "li" id that
+               was clicked and shows it. Ofcourse, even this can be made even more
+               compact had i known your entire DOM structure.     
+    });
+});
+
+</script>
