--- a/app/views/companies/configuracion.html.erb
+++ b/app/views/companies/configuracion.html.erb
@@ -1,6 +1,16 @@
 <div class="mid_box bordered_right">
 
 
+  <h3>
+    <%= image_tag("clients_32.png", :class => "vmiddle") %>
+    <%= link_to "Clientes", "/companies/customers/#{@company.id}" %>
+  </h3>
+
+  <p>
+     Agregar, editar or eliminar clientes para tu negocio.
+  </p>
+
+  <%= hr() %>
   
 <h3>
     <%= image_tag("product_kit_32.png", :class => "vmiddle") %>
