--- a/app/views/customers/index.xls.erb
+++ b/app/views/customers/index.xls.erb
@@ -8,21 +8,75 @@
     <Table>
       <Row>
         <Cell><Data ss:Type="String">ID</Data></Cell>
-        <Cell><Data ss:Type="String">Descripo</Data></Cell>
+        <Cell><Data ss:Type="String" >Descrip</Data></Cell>
         <Cell><Data ss:Type="String">Ruc</Data></Cell>
         <Cell><Data ss:Type="String">Grupo</Data></Cell>
         <Cell><Data ss:Type="String">Estacion</Data></Cell>
-      </Row>
+        <Cell><Data ss:Type="String">Codigo</Data></Cell>
+        <Cell><Data ss:Type="String">Formato</Data></Cell>
+        <Cell><Data ss:Type="String">Codigo</Data></Cell>
+        <Cell><Data ss:Type="String">Nombre</Data></Cell>
+
+        <Cell><Data ss:Type="String">Cargo</Data></Cell>
+        <Cell><Data ss:Type="String">Telefono1</Data></Cell>
+        <Cell><Data ss:Type="String">Telefono2</Data></Cell>
+        <Cell><Data ss:Type="String">Telefono3</Data></Cell>
+        <Cell><Data ss:Type="String">Anexo 1</Data></Cell>
+        <Cell><Data ss:Type="String">Anexo 2</Data></Cell>
+        <Cell><Data ss:Type="String">Anexo 3</Data></Cell>
+        <Cell><Data ss:Type="String">Celular 1</Data></Cell>
+        <Cell><Data ss:Type="String">Celular 2</Data></Cell>
+        <Cell><Data ss:Type="String">Celular 3</Data></Cell>
+        <Cell><Data ss:Type="String">Correo 1</Data></Cell>
+        <Cell><Data ss:Type="String">Correo 2</Data></Cell>
+        
+              </Row>
     <% @customers.each do |product| %>
       <Row>
         <Cell><Data ss:Type="Number"><%= product.id %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= product.name %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= product.name  %></Data></Cell>
         <Cell><Data ss:Type="String"><%= product.ruc %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= product.account %></Data></Cell>
         <Cell><Data ss:Type="String"><%= product.address1 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= product.address2 %></Data></Cell>
       </Row>
-    <% end %>
+
     
+    <% product.customer_contacts.each  do |formato2| %>
+
+      <Row>
+       <Cell><Data ss:Type="Number"><%= product.id %></Data></Cell>
+         <Cell><Data ss:Type="String"><%= product.name  %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= product.ruc %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= product.address1 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= product.address2 %></Data></Cell>
+      
+
+        <Cell><Data ss:Type="Number"><%= formato2.code %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= formato2.name %></Data></Cell> 
+        <Cell><Data ss:Type="String"><%= formato2.cargo %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= formato2.telefono1%></Data></Cell>
+        <Cell><Data ss:Type="String"><%= formato2.telefono2%></Data></Cell>
+        <Cell><Data ss:Type="String"><%= formato2.telefono3%></Data></Cell>
+        <Cell><Data ss:Type="String"><%= formato2.anexo1%></Data></Cell>
+        <Cell><Data ss:Type="String"><%= formato2.anexo2%></Data></Cell>
+        <Cell><Data ss:Type="String"><%= formato2.anexo3%></Data></Cell>
+        <Cell><Data ss:Type="String"><%= formato2.celular1%></Data></Cell>
+        <Cell><Data ss:Type="String"><%= formato2.celular2%></Data></Cell>
+        <Cell><Data ss:Type="String"><%= formato2.celular3%></Data></Cell>
+        <Cell><Data ss:Type="String"><%= formato2.correo1%></Data></Cell>
+        <Cell><Data ss:Type="String"><%= formato2.correo2%></Data></Cell>
+        
+        
+      </Row>
+
+
+
+         <% end  %> 
+
+
+    
+    <% end %>
+
     </Table>
   </Worksheet>
 </Workbook>
