--- a/app/views/ordens/_form.html.erb
+++ b/app/views/ordens/_form.html.erb
@@ -55,7 +55,7 @@
  
     <div class="field">
       <%= f.label :medio_id %><br />
-      <%= f.collection_select :medio_id, @medios,:id,:full_name,{:prompt   => "Selec un medio"} %>
+      <%= f.collection_select :medio_id, @medios,:id,:descrip,{:prompt   => "Selec un medio"} %>
     </div>
 
     <div class="field">
