--- a/app/views/ordens/_show4.html.erb
+++ b/app/views/ordens/_show4.html.erb
@@ -1,4 +1,4 @@
-
+  
 <table>
   <thead>
     <tr>
@@ -154,8 +154,13 @@
 
 
           <td class="small bordered_bottom bordered_right">
+            <% if !product.medio_detail_id.nil?%>
              <%= product.medio_detail.name  %>    
+            <% else %>
+             - 
+            <% end %>
           </td>
+
           <td class="small bordered_bottom bordered_right">
            <%= @orden.version.descrip  %>    
           </td>
@@ -165,11 +170,23 @@
           </td>
 
           <td class="small bordered_bottom bordered_right">
+
+        <% if !product.tipo_aviso_id.nil?%>
+            
            <%=  product.tipo_aviso.name  %>    
+          <% else %>
+             - 
+            <% end %>
           </td>
           
           <td class="small bordered_bottom bordered_right">
+           <% if !product.tipo_tarifa_id.nil?%>
+            
            <%=  product.tipo_tarifa.name %>    
+            <% else %>
+             - 
+            <% end %>
+         
           </td>
           <td class="small bordered_bottom bordered_right">
           
