--- a/app/views/ordens/_show2.html.erb
+++ b/app/views/ordens/_show2.html.erb
@@ -161,7 +161,11 @@
          
 
           <td class="small bordered_bottom bordered_right">
+            <% if !product.medio_detail_id.nil?%>
              <%= product.medio_detail.name  %>    
+            <% else %>
+             - 
+            <% end %> 
           </td>
           <td class="small bordered_bottom bordered_right">
            <%= @orden.version.descrip  %>    
@@ -172,11 +176,22 @@
           </td>
 
           <td class="small bordered_bottom bordered_right">
+          
+        <% if !product.tipo_aviso_id.nil?%>
+            
            <%=  product.tipo_aviso.name  %>    
+          <% else %>
+             - 
+            <% end %>  
           </td>
           
           <td class="small bordered_bottom bordered_right">
+             <% if !product.tipo_tarifa_id.nil?%>
+            
            <%=  product.tipo_tarifa.name %>    
+            <% else %>
+             - 
+            <% end %> 
           </td>
           <td class="small bordered_bottom bordered_right">
           
