--- a/app/views/ordens/_show3.html.erb
+++ b/app/views/ordens/_show3.html.erb
@@ -150,7 +150,11 @@
          
 
           <td class="small bordered_bottom bordered_right">
+              <% if !product.medio_detail_id.nil?%>
              <%= product.medio_detail.name  %>    
+            <% else %>
+             - 
+            <% end %>    
           </td>
           <td class="small bordered_bottom bordered_right">
            <%= @orden.version.descrip  %>    
