--- a/app/views/ordens/_show7.html.erb
+++ b/app/views/ordens/_show7.html.erb
@@ -161,7 +161,11 @@
           </td>
 
           <td class="small bordered_bottom bordered_right">
+                <% if !product.medio_detail_id.nil?%>
              <%= product.medio_detail.name  %>    
+            <% else %>
+             - 
+            <% end %> 
           </td>
           <td class="small bordered_bottom bordered_right">
            <%= @orden.version.descrip  %>    
