--- a/app/views/ordens/orden_rpt2.pdf.erb
+++ b/app/views/ordens/orden_rpt2.pdf.erb
@@ -54,8 +54,15 @@
     
     <td> Orden </td>
     <td> <%= a.code %> </td>
+
+  <% if !a.contrato.nil?%>
     <td>  <%= a.contrato.code  %> </td>
     <td>Mon: <%= a.contrato.get_moneda %></td>
+    
+   <% else %>
+   <td> - </td>
+  
+   <% end %> 
     <td>Tiempo: '<%= a.tiempo %> </td>
     <td><%= a.marca.name %></td>
     <td><%= a.producto.name %></td>
@@ -151,8 +158,15 @@
                     
                     <td> Orden </td>
                     <td> <%= product.code %> </td>
+
+                     <% if !product.contrato.nil? %>  
                     <td><%= product.contrato.code  %> </td>
                     <td>Mon: <%= product.contrato.get_moneda %></td>
+                    <% else %>
+                    <td> -  </td>
+                    
+                    <% end %>
+
                     <td>Tiempo: '<%= a.tiempo %> </td>
                     <td><%= product.marca.name %></td>
                     <td><%= product.producto.name %></td>
@@ -249,8 +263,16 @@
                 
                 <td> Orden </td>
                 <td> <%= product.code %> </td>
+                <% if !product.contrato.nil? %>
+
                 <td><%= product.contrato.code  %> </td>
+
                 <td>Mon: <%= product.contrato.get_moneda %></td>
+                <% else %>
+                <td> - </td>
+
+                  <% end %>
+
                 <td>Tiempo: '<%= a.tiempo %> </td>
                 <td><%= product.marca.name %></td>
                 <td><%= product.producto.name %></td>
