--- a/app/views/ordens/show.html.erb
+++ b/app/views/ordens/show.html.erb
@@ -53,6 +53,14 @@
 <b> Revision </b> 
   <%= @orden.revision %>
 </p>
+<b> Mes </b> 
+  <%= @orden.month %>
+</p>
+<b> Año </b> 
+  <%= @orden.year %>
+</p>
+
+
 
 <%= hr() %>
 
