--- a/app/views/ordens/_show2.html.erb
+++ b/app/views/ordens/_show2.html.erb
@@ -1,3 +1,4 @@
+<% last_day = @orden.days_in_month(@orden.month,@orden.year )  %>
 
 <table>
   <thead>
@@ -37,103 +38,115 @@
        Duracion 
       </th>
       <th>
-        1
+        1 <%="\n"+get_name_dia(@fechadia1) %>
       </th>
       
       <th>
-        2
+        2 <%="\n"+get_name_dia(@fechadia2) %>
       </th>
       <th>
-        3
+        3<%="\n"+get_name_dia(@fechadia3) %>
       </th>
       <th>
-        4
+        4<%="\n"+get_name_dia(@fechadia4) %>
       </th>
       <th>
-        5
+        5<%="\n"+get_name_dia(@fechadia5) %>
       </th>
       <th>
-        6
+        6<%="\n"+get_name_dia(@fechadia6) %>
       </th>
       <th>
-        7
+        7<%="\n"+get_name_dia(@fechadia7) %>
       </th>
       <th>
-        8
+        8<%="\n"+get_name_dia(@fechadia8) %>
       </th>
       <th>
-        9
+        9<%="\n"+get_name_dia(@fechadia9) %>
       </th>
       
       <th>
-        10
+        10<%="\n"+get_name_dia(@fechadia10) %>
       </th>
       <th>
-        11
+        11<%="\n"+get_name_dia(@fechadia11) %>
       </th>
       <th>
-        12
+        12<%="\n"+get_name_dia(@fechadia12) %>
       </th>
       <th>
-        13
+        13<%="\n"+get_name_dia(@fechadia13) %>
       </th>
       <th>
-        14
+        14<%="\n"+get_name_dia(@fechadia14) %>
       </th>
       
       <th>
-        15
+        15<%="\n"+get_name_dia(@fechadia15) %>
       </th>
       <th>
-        16
+        16<%="\n"+get_name_dia(@fechadia16) %>
       </th>
       <th>
-        17
+        17<%="\n"+get_name_dia(@fechadia17) %>
       </th>
       <th>
-        18
+        18<%="\n"+get_name_dia(@fechadia18) %>
       </th>
       <th>
-        19
+        19<%="\n"+get_name_dia(@fechadia19) %>
       </th>
       <th>
-        20
+        20<%="\n"+get_name_dia(@fechadia20) %>
       </th>
       
       <th>
-        21
+        21<%="\n"+get_name_dia(@fechadia21) %>
       </th>
       <th>
-        22
+        22<%="\n"+get_name_dia(@fechadia22) %>
       </th>
       <th>
-        23
+        23<%="\n"+get_name_dia(@fechadia23) %>
       </th>
       <th>
-        24
+        24<%="\n"+get_name_dia(@fechadia24) %>
       </th>
       <th>
-        25
+        25<%="\n"+get_name_dia(@fechadia25) %>
       </th>
       <th>
-        26
+        26<%="\n"+get_name_dia(@fechadia26) %>
       </th>
       
       <th>
-        27
+        27<%="\n"+get_name_dia(@fechadia27) %>
       </th>
+
+      
       <th>
-        28
+        28<%="\n"+get_name_dia(@fechadia28) %>
       </th>
+
+      <% if last_day >= 29 %> 
       <th>
-        29
+        29<%="\n"+get_name_dia(@fechadia29) %>
       </th>
+      <% end %>
+       <% if last_day >= 30 %> 
       <th>
-        30
+        30<%="\n"+get_name_dia(@fechadia30) %>
       </th>
-      <th>
-        31
-      </th>
+      <% end %>
+
+      <% if last_day == 31 %> 
+
+          <th>
+            31<%="\n"+get_name_dia(@fechadia31) %>
+          </th>
+     <% end %>
+
       <th>
         Cant.
       </th>
@@ -291,20 +304,32 @@
           <td class="small bordered_bottom bordered_right">
             <%= product.d28 %>              
           </td>
+
+              <% if last_day >= 29 %> 
           <td class="small bordered_bottom bordered_right">
             <%= product.d29 %>              
           </td>
+
+            <%end %>
+
+              <% if last_day >= 30 %> 
           <td class="small bordered_bottom bordered_right">
             <%= product.d30 %>              
           </td>
+            <%end %>
+              <% if last_day >= 31 %> 
           <td class="small bordered_bottom bordered_right">
             <%= product.d31 %>              
           </td>
+
+          <%end %>
           <td class="small bordered_bottom bordered_right">
             <%= money(product.quantity) %>
 
                     
           </td>
+
+
                    
           
       
