--- a/app/views/ordens/_show6.html.erb
+++ b/app/views/ordens/_show6.html.erb
@@ -316,6 +316,7 @@
           <td class="small bordered_bottom bordered_right">
             <%= product.d31 %>              
           </td>
+          <%end %>
           <td class="small bordered_bottom bordered_right">
             <%= money(product.quantity) %>
 
