--- a/app/views/ordens/_show4.html.erb
+++ b/app/views/ordens/_show4.html.erb
@@ -296,6 +296,11 @@
           <td class="small bordered_bottom bordered_right">
             <%= product.d27 %>              
           </td>
+                  <td class="small bordered_bottom bordered_right">
+            <%= product.d28 %>              
+          </td>
+
+
              <% if last_day >= 29 %> 
           <td class="small bordered_bottom bordered_right">
             <%= product.d29 %>              
