--- a/app/views/versions/index.html.erb
+++ b/app/views/versions/index.html.erb
@@ -25,8 +25,24 @@
         <%else %>
 
               <td><%= version.producto.name %></td>
+
+              <% if version.producto.marca.nil? %>
+              <td>---</td>
+
+              <%else %>
+
               <td><%= version.producto.marca.name %></td>
+
+              <%end%>
+
+              <% if version.producto.marca.customer.nil?%>
+               <td>---</td>
+
+              <%else%>
+
               <td><%= version.producto.marca.customer.name %></td>
+
+              <%end%>
 
         <% end %>
 
