--- a/app/views/marcas/index.html.erb
+++ b/app/views/marcas/index.html.erb
@@ -22,7 +22,7 @@
         <% end %>
         <td><%= link_to 'Ver', marca %></td>
         <td><%= link_to 'Editar', edit_marca_path(marca) %></td>
-         <%     if current_user.level != "admin"  %>
+         <%     if current_user.level == "admin"  %>
 
         <td><%= link_to 'Eliminar ', marca, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
