--- a/app/views/versions/index.html.erb
+++ b/app/views/versions/index.html.erb
@@ -50,7 +50,7 @@
 
         <td><%= link_to 'Ver', version %></td>
         <td><%= link_to 'Editar', edit_version_path(version) %></td>
-         <%     if current_user.level != "admin"  %>
+         <%     if current_user.level == "admin"  %>
         <td><%= link_to 'Elimnar', version, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
